<resources>
    <string name="app_name">MD Postres</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products_title">Productos</string>
    <string name="item_product_photo_description">Imagen del producto</string>
    <string name="item_product_name_hint">Nombre del producto</string>
    <string name="products_add_cart">Añadir</string>
    <string name="car_price">$ 1.500</string>
    <string name="product_check_list">Pedido:</string>

    <string name="cart_pay">Pagar</string>
    <string name="cart_back">Atras</string>
    <string name="cart_title">Carrito de compras</string>

    <string name="cart_sum">Total: $%1.2f</string>
    <string name="confirmation_message">Sus alimentos llegaran pronto, Gracias por su compra.</string>
    <string name="confirmation_status">Pago exitoso</string>
    <string name="confirmation_done">Listo</string>
    <string name="confirmation_title">Pago</string>
    <string name="confirmation_title_alt">Pago (by Id)</string>
    <string name="bottom_sheet_title">¿Salir de MD Postres?</string>
    <string name="bottom_sheet_exit">Salir</string>
</resources>